# jai-remote-acp-persona

./: .gitignore  README.md  main.py  pyproject.toml
src/jai_remote_acp_persona/: __init__.py  example_persona.py  remote_acp_client.py  remote_acp_persona.py
